2020-09-23  Chris Dumez  <cdumez@apple.com>

        Turn on the modern unprefixed WebAudio API
        https://bugs.webkit.org/show_bug.cgi?id=216885

        Reviewed by Eric Carlson.

        Turn on the modern unprefixed WebAudio API now that we support most of the API
        besides AudioWorklet and now that we have a good pass rate on WPT tests.

        * Shared/WebPreferencesExperimental.yaml:

2020-09-23  Truitt Savell  <tsavell@apple.com>

        Unreviewed, reverting r267403.

        Caused 50+ Crashes on iOS Debug

        Reverted changeset:

        "Move Media in GPU Process flag from internal to experimental"
        https://bugs.webkit.org/show_bug.cgi?id=216473
        https://trac.webkit.org/changeset/267403

2020-09-23  Youenn Fablet  <youenn@apple.com>

        Add support for HTMLMediaElement.setSinkId
        https://bugs.webkit.org/show_bug.cgi?id=216696

        Reviewed by Eric Carlson.

        Add internal flag to enable/disable user gesture requirement for setting audio output device,
        and for per media element setting of audio output device.

        * Shared/WebPreferencesExperimental.yaml:
        * Shared/WebPreferencesInternals.yaml:

2020-09-22  Wenson Hsieh  <wenson_hsieh@apple.com>

        [GPU Process] fast/canvas/canvas-blend-image.html and fast/canvas/canvas-blend-solid.html fail on macOS
        https://bugs.webkit.org/show_bug.cgi?id=216860

        Reviewed by Said Abou-Hallawa.

        These two tests disable accelerated drawing for canvas elements; when using the GPU process, this causes us to
        use `ImageBufferShareableBitmapBackend` as the back-end for the image buffer backing the canvas element.

        On both macOS and iOS, the image buffer is backed by BGRA image data. However, we override
        `backendColorFormat()` and return `ColorFormat::BGRA` only for `PLATFORM(IOS_FAMILY)`, causing `putImageData`