@@ -1,3 +1,12 @@
+2020-09-23  Per Arne Vollan  <pvollan@apple.com>
+
+        [macOS] Start collecting telemetry from a set of XPC services
+        <https://bugs.webkit.org/show_bug.cgi?id=216797>
+
+        Reviewed by Brent Fulgham.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2020-09-23  Chris Dumez  <cdumez@apple.com>
 
         Turn on the modern unprefixed WebAudio API
